feat(Ticket): Added jwt author to create ticket
